Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,115 +1,4 @@
 #summary Installation guide for GPS
 #labels Phase-Deploy,Deprecated
 
-_Some guys and girls, have made good videotutorials teaching how to install GPS properly if you need help. So thanks a lot for their work that i really apreciate. 
-As Gimp and GPS are crossplatform, here it is the way to install in each case._
-
-{{{
-GNU/Linux
-  *Ubuntu From PPA
-  *Installing GPS using folders.
-
-Windows
-  *Windows Vista
-  *Windows XP
-  *Windows 7
-
-Installing GPS in 10 easy steps.
-}}}
-
-
-=GNU/Linux OS= 
-==Installing GPS from a PPA (Ubuntu, mint ...)==
-Thanks to Sergei Davidoff we have a PPA.To add the PPA and install GIMP Paint Studio in Ubuntu (you obviously need to install GIMP first), use the following commands:
-
-{{{
-sudo add-apt-repository ppa:shnatsel/gimp-paint-studio
-sudo apt-get update
-sudo apt-get install gimp-paint-studio
-}}}
- more info about PPA stuff
-https://launchpad.net/~shnatsel/+archive/gimp-paint-studio
-
-http://www.webupd8.org/2011/02/gimp-painter-and-gimp-paint-studio.html
-
-==Installing GPS using folders==
-
-you can paste simply this, line by line in a terminal , the command start with a copy of your existing preset and gimp configuration , because it still important to keep the possibility to revert later.
-{{{
-mv ~/.gimp-2.6 ~/.gimp-2.6-backup
-wget http://gps-gimp-paint-studio.googlecode.com/files/GPS%201_5_final%20release.zip
-unzip GPS\ 1_5_final\ release.zip -d ~/.gimp-2.6
-rm GPS\ 1_5_final\ release.zip
-}}}
-
-==How to install GPS in Ubuntu using Folders by [http://www.youtube.com/user/Tru3m0sl3m Tru3m0sl3m]==
-<wiki:video url="http://www.youtube.com/watch?v=2_XuGPwlGxk"/>
-
-
-----
-----
-----
-
-=Windows OS=
-----
-==How to install GPS in Windows XP by [http://www.youtube.com/user/reeceyamato reeceyamato]== 
-<wiki:video url="http://www.youtube.com/watch?v=g1KnTepWQzs&NR=1&feature=fvwp"/>
-
-==How to install GPS in Windows 7 by [http://www.youtube.com/user/blender3D101 blender3D101]== 
-<wiki:video url="http://www.youtube.com/watch?v=IW-cH2wY5Eg&feature=related"/>
-
-
-----
-==Installing GPS in 10 easy steps==
-*GIMP must be installed on your computer before* installing GPS. If it is not installed, you can download it from the official website:
-
-http://www.gimp.org/downloads/
-
-1. Install gimp and execute it for the first time.Do nothing and Quit. (this step create the *tool-options* folder wich is needed later).
- 
-
-2. Download the last version of GPS From the google code page:
-
-http://code.google.com/p/gps-gimp-paint-studio/downloads/list
-
-To install Gimp Paint Studio, first we must know *where the user directory of Gimp is located.* Usually this is a hidden folder.Assuming you have installed Gimp version 2.6.x (where x can be 10, 11 or later...) is usually found at:
-
-  * Windows : C:\Documents and Settings\username\.gimp-2.6(Edit folder options if it is not visible.)
-
-  * MacOS : /Users/username/Library/Application Support/Gimp
-
-  * GNU/Linux : /home/username/.gimp-2.6 (Ctrl+H if it is not visible)
-
-  * If you have the portable version “GIMPPortable/App/gimp/share/gimp/2.0/
-
-Start the fun part!
-you should back up the original files in case you wish to restore originals
-
-3. Copy the contents of the *brushes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/brushes)
-
-4. Copy the contents of the *patterns* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/patterns)
-
-5. Copy the contents of the *gradients* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/gradients)
-
-6. Copy the contents of the *palettes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/palettes)
-
-7. Copy the contents of the *tool-options* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/tool-options)
-
-8. If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the Gimp directory.(/.gimp-2.6)  This file will add icons for the new tools in the Toolbox. *You should make a copy of this file in case you later want to restore*.
-
-9. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. Copy the file *sessionrc* to the Gimp directory.(/.gimp-2.6). This will change the layout of GIMP's windows.*You should make a copy of this file in case you later want to restore*.
- 
-Start Gimp. 
-
-10. The next step is optional but will improve the overall usability of the user   interface.
-
-_Edit->Preferences->Toolbox_
-Activate the three ticks available there.
-
-_Edit->Preferences->Tool Options_  
-On this page, under the Paint Options Shared Between Tools, disable the three options (Brush, Pattern, and Gradient).
-
-_Edit->Preferences->Image Windows/Mouse Pointers_
-Disable the “Show brush outline” option and make sure you have “checked” or enabled the “Show pointer for paint tools”.This will increase the speed of brushes when you are painting.
-
-That's  all. Enjoy it, this is the most important step!
+WIP for 2.0 
