Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,107 +1,7 @@
 #labels Featured
-PDF user guide on the Downloads section.
+PDF user guide on the Downloads section.  (SPanish) 
+Looking for English translation.
 
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/Banner-GPS-1_5.jpg
-*Current release of GPS at 2011-05-11 is 1.5*
 
-= Features of GPS =
-
-===*Better Layout Design*===
-----
-New bigger and redesigned layout to achieve more space and better tools location. 
-
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/Gimp-GPS-Layout.jpg
-(all windows location are stored on the "sessionrc" file)
-
-In order for GPS to work properly *your display should be at least 1280 x 960 pixels* though higher resolution will provide more working space. It is not uncommon to work at 1600 x 1200 pixels and higher, or even with 2 monitors.  Remember that *GPS is intended for graphic designers* and artists who typically have access to larger displays.
-
-
-===*Chaos & Evolutions Brushpack included by default*===
-----
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaintStudio-ce-David.jpg
-
-I believe that GPS could have. Subsets, so the first one is Chaos & Evolutions created by David Revoy the Art director of the Blender open source movie, [http://sintel.org/ Sintel].
-
-
-
-
-===*Presets for more tools, not only painting tools*===
-----
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaintStudio-presets.jpg
-
-More tools to do other usual tasks as Gradient effects, cropping  work, cloning and much more.
-
-  * Selection Presets
-  * Cropping Presets
-  * Fill Presets
-  * Gradient Presets
-  * Pencil Presets
-  * Paintbrush Presets
-  * Smudge Presets
-  * Airbrush Presets
-  * Eraser Presets
-  * Ink Tool Presets
-  * Cloning Presets
-  * Brush/Sharpen Presets
-  * Mixbrush Presets. (only with Gimp painter)
-  * G-Pen Presets. (only with Gimp painter)
-
-
-
-===*Tag System*===
-----
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaintStudio-tag-system.jpg
-
-A better way to understand where our presets are, and how they work. I have included the Blendmode of some presets. And also a type of hint by Select Gradient or Select Foreground color. That makes the presets management faster.
-
-
-
-===*A complete pack to fit our artistic needs that includes*===
-----
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/resources.jpg
-  * Gradients for presets and fx.
-  * +200 brushes.
-  * High resolution Patterns to mimic artistic Mediums.
-
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaintStudio-real-mediums.jpg
-
-===*Gimp painter optimized*===
-----
-http://www.davidrevoy.com/data/images/blog/2011/05/gps15-gimp-painter_02.jpg
-
-Gimp Paint Studio uses all the power of Gimp Painter fork.*
-Test sheet , to show how incredible are 6 picked presets of the Gimp-painter mixbrush tools . With mixing + texture , it's actually the most advanced digital painting FLOSS tool.
-
-Check the following video to see how the mixbrush tool works.
-
-<wiki:video url="http://www.youtube.com/watch?v=4xDpuzephiI&feature=related"/>
-
-The Gimp Painter fork can be located here.
-http://sourceforge.jp/projects/gimp-painter/releases/ 
-
-
-
-
-===*Final Words?*===
-----
-GIMP is a tool, and therefore it is more important who use the tool than the tool itself.Art is about that concept. It must be fun and i sure you painting with gimp and GPS is very fun.
-
-
-  * GPS Home http://code.google.com/p/gps-gimp-paint-studio/ 
-  * Tweeter http://twitter.com/#!/GimpPaintStudio 
- 
-  * Deviant Art http://theshock.deviantart.com/ 
-  * WEB  http://www.ramonmiranda.com/
-
-
-
-
-----
-best regards
-Ramón Miranda, 
-GPS project Chairman
-
-GPS can be used for any purpose without restriction, under those terms:
-http://creativecommons.org/licenses/by-sa/3.0/ 
