Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,7 +1,5 @@
 #labels Featured
-PDF user guide on the Downloads section.  (SPanish) 
+PDF user guide on the Downloads section.  (Spanish) 
 Looking for English translation.
 
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
-
-
