Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,7 +1,37 @@
-#summary Installation guide for GPS
 #labels Phase-Deploy,Deprecated
+*INSTALLATION GUIDE FOR GPS 2.0* alpha version
+------
+*WINDOWS XP/7 USERS*
 
-WIP for 2.0 
+1. Download *GPS_Gimp_Paint_Studio_2_0* from downloads section;
+
+2. Unzip folder and move it's contents to your Gimp 2.8 preferences directory
+    Typically it's located in:
+
+     _c:/users/your_username/documents/gimp 2.8_
+
+3. Run Gimp and enjoy new set of tools
+-----
+*LINUX USERS*
+
+1. Download *GPS_Gimp_Paint_Studio_2_0* from downloads section;
+
+2. Unzip folder and move it's contents to your Gimp 2.8 preferences directory
+     Typically it's located in:
+
+     _/home/your_username/.gimp-2.8_
+
+_Your .gimp-2.8 folder in Home directory is by default hidden; to see it, go to 'View' tab in file manager and click 'Show Hidden Files'_
+
+3. Run Gimp and enjoy new set of tools
 
 
-editing test
+
+------
+Optionally you can install sessionrc- set of interface preferences including predefined docks, layout and other minor changes.
+
+To do that, download *'sessionrc para GPS 2.0'*, unzip and copy files to your Gimp preferences directory as described above.
+
+____________
+
+Please note, that while GPS won't overwrite default set of brushes and presets, it will add it's content into specific folders, however, sessionrc files WILL overwrite existing default files. If you are not sure whether you will find them useful, please backup sessionrc files before installing new ones to easily revert changes.
