Edited wiki page Videotutorials_EN through web user interface.

--- a/wiki/Videotutorials_EN.wiki
+++ b/wiki/Videotutorials_EN.wiki
@@ -22,7 +22,7 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 
  || *GIMP PAINTER- Drawing and Painting with GPS 1.4 III)* <wiki:video url="http://www.youtube.com/watch?v=cNGX_yYAYt8&feature=fvw"/> || *GIMP PAINTER- Drawing and Painting with GPS 1.4 IV)* <wiki:video url="http://www.youtube.com/watch?v=7XrKGMO11ts&feature=fvw"/> ||
 
- || *GIMP - [Speedrawing] FanART: Giada from WHITE [ Gumitien's production]* <wiki:video url="http://www.youtube.com/watch?v=oHnFfRfv-qg&feature=relmfu"/> || *SpeedDrawing: Miku and BlackRockShooter* <wiki:video url="http://www.youtube.com/watch?v=0R2x1bpJJOU&feature=related"/> ||
+ || *GIMP - [Speedrawing] FanART: Giada from WHITE [ Gumitien's production]* <wiki:video url="http://www.youtube.com/watch?v=oHnFfRfv-qg&feature=relmfu"/> || *OriginalArt: Sweet Dream* <wiki:video url="http://www.youtube.com/watch?v=1a39IfLFeMA&feature=share&list=UUpUM6z6UCKhzx-HB37qFgKg"/> ||
 
  || *SpeedDrawing Howl Moving Castle - LineArt * <wiki:video url="http://www.youtube.com/watch?v=A6iPNCmbKbQ"/> || *SpeedDrawing Howl Moving Castle - Coloring * <wiki:video url="http://www.youtube.com/watch?v=m98xGONU-6I"/> ||
 
