--- a/wiki/Videotutorials_EN.wiki
+++ b/wiki/Videotutorials_EN.wiki
@@ -24,7 +24,7 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 
  || *GIMP - [Speedrawing] FanART: Giada from WHITE [ Gumitien's production]* <wiki:video url="http://www.youtube.com/watch?v=oHnFfRfv-qg&feature=relmfu"/> || *OriginalArt: Sweet Dream* <wiki:video url="http://www.youtube.com/watch?v=1a39IfLFeMA&feature=share&list=UUpUM6z6UCKhzx-HB37qFgKg"/> ||
 
- || *SpeedDrawing Howl Moving Castle - LineArt * <wiki:video url="http://www.youtube.com/watch?v=A6iPNCmbKbQ"/> || *SpeedDrawing Howl Moving Castle - Coloring * <wiki:video url="http://www.youtube.com/watch?v=m98xGONU-6I"/> ||
+ || *OriginalART: FUTURISTIC LOVER* <wiki:video url="http://youtu.be/hDf2xDiRVhs"/> || *FanART: MikuHatsune & BlackRockShooter* <wiki:video url="http://youtu.be/yX4eHTVbdWA"/> ||
 
  
 Do you want to see your video here? please contact me and let me know it!
